web-infras/parser/tests/fixtures/esprima/declaration/function/invalid-strict-labelled-function-declaration/output.txt
[SyntaxError]: In strict mode code, functions can only be declared at top level or inside a block. (1,18)
1|"use strict"; a: function f(){}
 |                ^
